<resources>
    <string name="app_name">TodoListApp</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="to_do_s">To-do\'s</string>
    <string name="add_to_do">Add to-do</string>
    <string name="job">Job</string>
    <string name="shopping">Shopping</string>
    <string name="other">Other</string>
    <string name="try_again">Try again</string>
    <string name="cancel">Cancel</string>
    <string name="an_error_occurred">An error occurred</string>
    <string name="error">Error</string>
    <string name="what_is_to_do">What is to do?</string>
    <string name="save">Save</string>
    <string name="category">Category</string>
    <string name="when">When?</string>
    <string name="back_arrow">Back arrow</string>
    <string name="to_do_list_is_empty">To-do list is empty!</string>
    <string name="add_note">Add note</string>
    <string name="incorrect_data">Incorrect data!</string>
    <string name="added_successfully">Added successfully!</string>
    <string name="select_date">Select date</string>
    <string-array name="todo_categories">
        <item>Job</item>
        <item>Shopping</item>
        <item>Other</item>
    </string-array>
</resources>